# cool-compression

./: .gitignore  pyproject.toml
src/: ccp.py  compressor.py  file_loader.py  lib.py  model.py  model_manager.py
src/file_loader/: __init__.py  file_loader_old.py  lib.py  meson.build  pyproject.toml
src/file_loader/src/: lib.c  lib.h  py_file_loader.c  test.c
