[project]
name = "cool-compression"
version = "0.1.0"
description = "CCP for every file on every machine!"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.3",
    "file_loader"
]


# -----------------------------------------------------------
# | handle CUDA/ROCm/CPU torch using sync flags             |
# | EXAMPLE: 'uv sync --extra cpu' will use CPU torch wheel |
# -----------------------------------------------------------

[project.optional-dependencies]
cpu = [ "torch>=2.11.0", "triton>=3.6.0" ]
cu128 = [ "torch>=2.11.0", "triton>=3.6.0" ]
rocm = [ "torch>=2.11.0", "triton-rocm>=3.6.0" ]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "rocm" },
    ]
]

[tool.uv.sources]
file_loader = { path = "src/file_loader" }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm", extra = "rocm" },
]
triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" }
]
triton = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true
